# cmake-demo

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
math/: CMakeLists.txt  MathFunc.cpp  MathFunc.hpp
